# Legal-Advisory-RAG-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: __init__.py  dependencies.py  request_models.py  routes.py
src/chunking/: __init__.py  base.py  chunk_models.py  hierarchical_chunker.py
src/confidence/: __init__.py  engine.py
src/config/: __init__.py  constants.py  settings.py
src/core/: __init__.py  exceptions.py  logging.py
src/embeddings/: __init__.py  embedding_model.py  pipeline.py  vector_store.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/generation/: __init__.py  inference_pipeline.py  llm_client.py  prompt_builder.py  query_rewriter.py
src/generation/templates/: grounding.txt  refusal.txt
src/guardrails/: __init__.py  citation_enforcer.py  confidence_threshold.py  disclaimer.py  injection_detector.py  scope_checker.py
src/ingestion/: __init__.py  base.py  docx_loader.py  json_loader.py  loader_factory.py  metadata_extractor.py  pdf_loader.py  text_cleaner.py  txt_loader.py
src/pipeline/: __init__.py  ingestion_orchestrator.py  orchestrator.py
src/retrieval/: __init__.py  bm25_engine.py  faiss_index.py  hybrid.py  reranker.py  retrieval_config.py  retrieval_result.py
src/schema/: __init__.py  corpus.py  legal_document.py  validators.py
src/telemetry/: __init__.py  logger.py  models.py  store.py
tests/: conftest.py  test_api.py  test_chunking.py  test_embeddings.py  test_evaluation.py  test_guardrails.py  test_ingestion.py  test_pipeline.py  test_retrieval.py  test_schema.py
