[project]
name = "legal-rag"
version = "0.1.0"
description = "Legal Advisory RAG Platform for Indian Law"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Pratyaksha", email = "pratyakshashastri123@gmail.com" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "llama-index>=0.12.0",
    "sentence-transformers>=3.1.0",
    "faiss-cpu>=1.9.0",
    "rank-bm25>=0.2.2",
    "groq>=0.12.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "regex>=2024.9.0",
    "nltk>=3.9.0",
    "ragas>=0.2.0",
    "structlog>=24.4.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
